        405 errors (method not allowed). Reported by Antonio Fiestas.
      - Fixed regression about the method filtering (ignore case).
      - Fixed bug in HttpDigestVerifier which didn't create the User
        into the request's ClientInfo property. 
        Reported by Bruno Harbulot.
      - Prevented threads to block when other requests's entities are
        not consummed.
          
- 2.0 Release Candidate 2 (2010-03-30)
    - API changes
      - Left an unspecified key stores 'null' to prevent troubles 
        with HTTP client connectors. Contributed by Bruno Harbulot.
      - Deprecated the getters for the keystore-related attributes in 
        each connector. Lets these values be read from the 
        DefaultSslContextFactory (which is initialized with the same 
        attributes as the individual connectors were using).
        Contributed by Bruno Harbulot.
      - User and Role classes now implement java.security.Principal
        interface. Removed UserPrincipal and RolePrincipal classes
        from the JAAS extension. The JaasUtils#createSubject() now
        also adds the ClientInfo#principals entries. 
        Suggested (in part) by Bruno Harbulot.
      - Added ServletUtils class to the Servlet extension with two
        methods to easily retrieve the Servlet request/response.
    - Bugs fixed
        - Fixed HeaderReader#addValues method.
          Reported by Carsten Lohmann. 
        - Fixed the resolver hash model provided by the Freemarker 
          extension when underlying resolvers return TemplateModel 
          values and allowed access to Freemarker configuration shared 
          variables. Reported by sirthias.
        - Fixed the StringWriter implementation for the GWT edition.
          Reported by Kelly McLaughlin.
        - Fixed potential bug with ATOM mappings (customizable feeds 
          feature). Reported by Thomas Conté.
        - Fixed generation of HTML representations for WADL resources.